* type=diff | introduce more options for 'filter=file.json' - 'added'/'deleted'/'moved' to not display xPath diff, if already accepted and known
* type=xpath | newly introduced utility to search for XML xpath value by using node-filter / xpath-filter / nameattribute-filter | additional output display-xmlnode, display-nameattribute

BUGFIX:
* type=rule-merger | bugfix if argument exportcsv=xyz projectfolder=xyz and rules are skipped - to create skipped output file correctly
* class ReferenceableObject | bugfix for - type=rule 'filter=(reflocation is.only DGNAME)'
* type=address | bugfix for 'filter=(reflocation is DGNAME)' if multiple reflocation are used
* class RULE.php method load_common_from_domxml() | bugfix to NOT set reference for group-tag - fix problems with tag-merger

GENERAL


2.0.65 (20221215)
UTIL:
* type=rule | introduce 'filter=(hit-count.fast >,<,=,! VALUE)'
* type=device | now support for Fawkes config snippet

BUGFIX:
type=rule 'filter=(timestamp.last-hit.fast = 0)' bugfix to avoid error out
type=rule 'filter=(timestamp-last-hit.fast < 10/01/2021)' | bugfix to not show rules which are unused

GENERAL
* update to Palo Alto Networks content version 8648-7733


2.0.64 (20221203)
UTIL:
* type=xml-issue | improve counting for applicationgroup/customurl fixes
* type=address | improvement for actions=name-rename
* type=address | introduce new 'actions=value-replace:SEARCH,REPLACE'
* type=rule actions=exportToExcel:file.html | introduce additionalFields 'resolveServiceAppDefaultSummary'
* type=rule | introduction of 'filter=(service no.app-default.ports)'

BUGFIX:
* type=diff | bugfix for shadow-json - to display also diff information if xml node value only change
* type=xml-issue | fix counting for service objects with double spaces in name

GENERAL
* pan-os-php-api - develop | improvements to use docker-compose with user DB
* set_alias_usage.sh | improvement to dyamically read correct full path where pan-os-php files are available


2.0.63 (20221024)